src/test/deca/context/invalid/test_affect_incompatible_float.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 01/01/2024

{
   float b = 1.0;
   boolean a = true;
   b = a;
}
